--- a/APMSQL-REST/pom.xml
+++ b/APMSQL-REST/pom.xml
@@ -4,7 +4,7 @@
 	<artifactId>APMSQL-REST</artifactId>
 	<version>1.0.2</version>
 	<packaging>jar</packaging>
-	<name>APMSQL-JDBC_REST</name>
+	<name>APMSQL-REST</name>
 	
 	<repositories>
 	      <repository>
