--- a/APMSQL-REST/pom.xml
+++ b/APMSQL-REST/pom.xml
@@ -1,11 +1,19 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	
+	<properties>
+		<!-- maven-compiler-plugin configuration -->
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
+	</properties>
+	
 	<modelVersion>4.0.0</modelVersion>
+	
 	<groupId>com.ca.apm.extensions</groupId>
 	<artifactId>APMSQL-REST</artifactId>
-	<version>1.0.3</version>
+	<version>1.0.4</version>
 	<packaging>jar</packaging>
-	<name>APMSQL-REST</name>
+	<name>CA APM Extension APMSQL-REST</name>
 
 	<repositories>
 		<repository>
@@ -18,13 +26,7 @@
 			<url>http://repository.jboss.org/nexus/content/groups/public/</url>
 		</repository>
 	</repositories>
-
-	<properties>
-		<!-- maven-compiler-plugin configuration -->
-		<maven.compiler.source>1.8</maven.compiler.source>
-		<maven.compiler.target>1.8</maven.compiler.target>
-	</properties>
-
+	
 	<dependencies>
 		<dependency>
 			<groupId>org.restlet.jse</groupId>
@@ -40,31 +42,45 @@
 			<groupId>org.restlet.jse</groupId>
 			<artifactId>org.restlet.ext.jetty</artifactId>
 			<version>2.3.0</version>
-		</dependency>
-		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>1.2.16</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-lang3</artifactId>
-			<version>3.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-api</artifactId>
-			<version>1.7.5</version>
-		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-log4j12</artifactId>
-			<version>1.7.5</version>
-		</dependency>
+		</dependency>		
 		<dependency>
 			<groupId>org.restlet.jse</groupId>
 			<artifactId>org.restlet.lib.org.restlet.lib.org.json</artifactId>
 			<version>2.0</version>
+		</dependency>
+		
+      	<dependency>
+        	<groupId>org.apache.logging.log4j</groupId>
+        	<artifactId>log4j-core</artifactId>
+        	<version>2.10.0</version>
+      	</dependency>
+      	<dependency>
+        	<groupId>org.apache.logging.log4j</groupId>
+        	<artifactId>log4j-1.2-api</artifactId>
+        	<version>2.10.0</version>
+    	</dependency>
+    	<dependency>
+			  <groupId>org.apache.logging.log4j</groupId>
+			  <artifactId>log4j-jul</artifactId>
+			  <version>2.10.0</version>
+			  <scope>runtime</scope>
+		</dependency>
+		<dependency>
+			  <groupId>org.apache.logging.log4j</groupId>
+			  <artifactId>log4j-jcl</artifactId>
+			  <version>2.10.0</version>
+			  <scope>runtime</scope>
+		</dependency>
+		<dependency>
+        	<groupId>org.apache.logging.log4j</groupId>
+        	<artifactId>log4j-slf4j-impl</artifactId>
+        	<version>2.10.0</version>
+        	<scope>runtime</scope>
+      	</dependency>      	    
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.0</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
@@ -91,38 +107,33 @@
 			<artifactId>teiid-client</artifactId>
 			<version>9.0.1</version>
 		</dependency>
+		<dependency>
+        	<groupId>com.lmax</groupId>
+        	<artifactId>disruptor</artifactId>
+        	<version>3.3.8</version>
+        </dependency>
+        <dependency>
+  			<groupId>com.conversantmedia</groupId>
+  			<artifactId>disruptor</artifactId>
+  			<version>1.2.11</version>
+  			<classifier>jdk8</classifier>
+		</dependency>
 	</dependencies>
 
 	<build>
-		<extensions>
-			<extension>
-				<groupId>com.ca.apm.extensions</groupId>
-				<artifactId>java-agent-resources</artifactId>
-				<version>1.3.0-SNAPSHOT</version>
-			</extension>
-		</extensions>
-
+		<resources>
+        	<resource>
+            	<directory>src/main/java</directory>
+            	<includes>
+                	<include>**/log4j2.xml</include>
+           	 	</includes>
+        	</resource>
+    	</resources>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-checkstyle-plugin</artifactId>
 				<version>2.15</version>
-				<executions>
-					<execution>
-						<id>validate</id>
-						<phase>validate</phase>
-						<configuration>
-							<configLocation>agent-resources/apm-9-8-checkstyle6.0-java-style.xml</configLocation>
-							<encoding>UTF-8</encoding>
-							<consoleOutput>true</consoleOutput>
-							<failsOnError>true</failsOnError>
-							<linkXRef>false</linkXRef>
-						</configuration>
-						<goals>
-							<goal>check</goal>
-						</goals>
-					</execution>
-				</executions>
 			</plugin>
 
 			<plugin>
@@ -131,9 +142,8 @@
 				<version>2.2</version>
 				<configuration>
 					<source>1.8</source>
-					<target>1.8</target>
+					<target>1.8</target>					
 				</configuration>
-				<!-- nothing here -->
 			</plugin>
 
 			<plugin>
@@ -155,6 +165,13 @@
 								<manifest>
 									<mainClass>com.wily.swat.apmsql.rest.bootstrap.Bootstrap</mainClass>
 								</manifest>
+								<manifestEntries>
+									<Implementation-Title>${project.name}</Implementation-Title>
+									<Implementation-Version>${project.version}</Implementation-Version>
+									<Implementation-Vendor>${project.vendor}</Implementation-Vendor>
+									<Implementation-URL>https://github.com/CA-APM/ApmSqlRest</Implementation-URL>		
+									<Extension-Name>${project.artifactId}</Extension-Name>											
+								</manifestEntries>
 							</archive>
 						</configuration>
 					</execution>
